--- a/doc/emojisup.dox
+++ b/doc/emojisup.dox
@@ -59,7 +59,7 @@ def get_emojis():
     raw_data  = response.read()
     return json.loads(raw_data)
  
-def download_images(dir_name, silent, remove):
+def download_images(dir_name, silent):
     if not os.path.exists(dir_name):
         os.makedirs(dir_name)
     json_data = get_emojis()
@@ -78,7 +78,7 @@ def download_images(dir_name, silent, remove):
                 except:
                     print('Unable to fetch %s' % (image_name))
                     success = False
-            if remove and not success:
+            if not success:
                 os.remove(dir_name+'/'+image_name)
         else:
             if not silent:
@@ -106,20 +106,20 @@ if __name__=="__main__":
     parser.add_argument('-d','--dir',help='directory to place images in')
     parser.add_argument('-t','--table',help='generate code fragment',action='store_true')
     parser.add_argument('-s','--silent',help='silent mode',action='store_true')
-    parser.add_argument('--remove',help='remove non / empty downloaded file',action='store_true')
     args = parser.parse_args()
 
     if args.table:
         produce_table()
     if args.dir:
-        download_images(args.dir, args.silent, args.remove)
+        download_images(args.dir, args.silent)
 \endcode
 
-When invoking it with the `-d image_dir` option the images will by downloaded in the `image_dir` directory.
-When invoking it with the `--remove` option when fetching the images the images  that are not present will no
-be present in the output directory (otherwise they will be present with size `0`)
-When invoking it with the `-s` option when fetching the images the images no messages about fetching / skipping
-images will be given, just messages about non retrievable images.
+When invoking the script with the `-d image_dir` option,
+the images will by downloaded to the `image_dir` directory.
+
+When invoking the script with the `-s` option,
+no progress messages are shown while fetching the images, except for when fetching an image fails.
+
 By means of the Doxygen configuration parameter
 \ref cfg_latex_emoji_directory "LATEX_EMOJI_DIRECTORY" the requested directory can be selected.
 
