Use style `plainnat` with `natbib` package
In the documentation (answer and comments of https://tex.stackexchange.com/questions/729789/how-can-i-arrange-my-bibliography-in-alphabetical-order) it is advised to use `plainnat` together with the `natbib` package and not the `plain` style.
For compatibility with the old style (and e.g. HTML) the option `numbers` should be used with the `natbib` package.

--- a/templates/latex/header.tex
+++ b/templates/latex/header.tex
@@ -168,7 +168,7 @@
 
   % ToC, LoF, LoT, bibliography, and index
   % Indices & bibliography
-  \usepackage{natbib}
+  \usepackage[numbers]{natbib}
   \usepackage[titles]{tocloft}
   \setcounter{tocdepth}{3}
   \setcounter{secnumdepth}{5}
