--- a/doc/customize.dox
+++ b/doc/customize.dox
@@ -46,16 +46,18 @@ on the output in real time.
 
 \subsection minor_tweaks_treeview Navigation
 
-By default Doxygen shows navigation tabs on top of every HTML page,
-corresponding with the following settings:
+By default Doxygen will show an interactive nagivation tree covering
+the full height of left hand side of each HTML page.
+This corresponding with the following settings in the Doxyfile:
 
-- \ref cfg_disable_index "DISABLE_INDEX" = \c NO
-- \ref cfg_generate_treeview "GENERATE_TREEVIEW" = \c NO
+- \ref cfg_disable_index "DISABLE_INDEX" = \c YES
+- \ref cfg_generate_treeview "GENERATE_TREEVIEW" = \c YES
+- \ref cfg_generate_treeview "FULL_SIDEBAR" = \c YES
 
-\image html layout_index_and_notreeview.png
-\image latex layout_index_and_notreeview.png width=8cm
+\image html layout_noindex_and_sidebar.png
+\image latex layout_noindex_and_sidebar.png width=8cm
 
-you can switch to an interactive navigation tree as sidebar using
+you can make the title area span the whole width of the page using
 
 - \ref cfg_disable_index "DISABLE_INDEX" = \c YES
 - \ref cfg_generate_treeview "GENERATE_TREEVIEW" = \c YES
@@ -64,14 +66,14 @@ you can switch to an interactive navigation tree as sidebar using
 \image html layout_noindex_and_treeview.png
 \image latex layout_noindex_and_treeview.png width=8cm
 
-you can also make the content span the title area of the screen using
+you can also replace the navigation tree by tabs on top of every HTML page,
+corresponding with the following settings:
 
-- \ref cfg_disable_index "DISABLE_INDEX" = \c YES
-- \ref cfg_generate_treeview "GENERATE_TREEVIEW" = \c YES
-- \ref cfg_generate_treeview "FULL_SIDEBAR" = \c YES
+- \ref cfg_disable_index "DISABLE_INDEX" = \c NO
+- \ref cfg_generate_treeview "GENERATE_TREEVIEW" = \c NO
 
-\image html layout_noindex_and_sidebar.png
-\image latex layout_noindex_and_sidebar.png width=8cm
+\image html layout_index_and_notreeview.png
+\image latex layout_index_and_notreeview.png width=8cm
 
 or even have both forms of navigation:
 
